--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 
+spring.datasource.url = jdbc:mysql://114.115.173.88:3306/qc?useUnicode=true&characterEncoding=utf8&useSSL=false
+spring.datasource.username = admin
+spring.datasource.password = 123456
+spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
+
+Server.port=8080
+
+spring.config.activate.on-profile=active
